--- a/Compatibility_with_bipartite_models.ipynb
+++ b/Compatibility_with_bipartite_models.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computational appendix of [arXiv:](www.arxiv.org/abs/).\n",
+    "# Computational appendix of [arXiv:1904.08943](https://arxiv.org/abs/1904.08943).\n",
     "---\n",
-    "In this appendix we describe with explicit formulas the *scalar extension* method presented in [arXiv:](www.arxiv.org/abs/) to impose relaxations of (non-convex) factorization constraints in semidefinite programs, and show how this method can be used to study correlations in complex causal networks.\n",
+    "In this appendix we describe with explicit formulas the *scalar extension* method presented in [arXiv:1904.08943](https://arxiv.org/abs/1904.08943) to impose relaxations of (non-convex) factorization constraints in semidefinite programs, and show how this method can be used to study correlations in complex causal networks.\n",
     "\n",
     "authors: Alejandro Pozas-Kerstjens\n",
     "\n",
